// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<div
  className="root"
>
  <div
    className="label"
    id="test__label"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={false}
          className="input"
          id="test__item__ch1"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
    <li
      key="ch2"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={false}
          className="input"
          id="test__item__ch2"
          name="test"
          onChange={null}
          type="radio"
          value="ch2"
        />
        <span
          className="radioLabel"
        >
          choice 2
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly only one option 1`] = `
<div
  className="root"
>
  <div
    className="label"
    id="test__label"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={false}
          className="input"
          id="test__item__ch1"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly only one option and hidden label 1`] = `
<div
  className="root"
>
  <div
    className="isLabelHidden"
    id="test__label"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={false}
          className="input"
          id="test__item__ch1"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
  </ul>
</div>
`;

exports[`rendering renders correctly with all props 1`] = `
<div
  className="root
        isRootStateWarning"
>
  <div
    className="isLabelRequired"
    id="test__label"
  >
    label
  </div>
  <ul
    className="list"
  >
    <li
      key="ch1"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={true}
          className="input"
          disabled={true}
          id="test__item__ch1"
          name="test"
          onChange={null}
          type="radio"
          value="ch1"
        />
        <span
          className="radioLabel"
        >
          choice 1
        </span>
      </label>
    </li>
    <li
      key="ch2"
    >
      <label
        className="inputWrap"
      >
        <input
          checked={false}
          className="input"
          disabled={true}
          id="test__item__ch2"
          name="test"
          onChange={null}
          type="radio"
          value="ch2"
        />
        <span
          className="radioLabel"
        >
          choice 2
        </span>
      </label>
    </li>
  </ul>
  <div
    className="description"
    id="test__descriptionText"
  >
    some help
  </div>
  <div
    className="error"
    id="test__errorText"
  >
    some error
  </div>
</div>
`;
